[gd_scene load_steps=5 format=3 uid="uid://ct2grvpwymu1b"]

[ext_resource type="Texture2D" uid="uid://duwjb76auw3ni" path="res://Artwork/Projectile_Sprites/Pixel_smg.png" id="1_amo5r"]
[ext_resource type="Script" path="res://Scripts/Projectile_Scripts/smg_gun.gd" id="1_k7vhn"]
[ext_resource type="AudioStream" uid="uid://dy7oqa324sieb" path="res://Audio/Sound Effects/Bullet-Hit-1.wav" id="3_ikeki"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_otoqo"]
b = Vector2(1, 0)

[node name="SMG_gun" type="Area2D"]
script = ExtResource("1_k7vhn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("SegmentShape2D_otoqo")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.064)
texture = ExtResource("1_amo5r")

[node name="gun_marker" type="Marker2D" parent="."]
position = Vector2(13, -2)

[node name="FireRate_Cooldown" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ikeki")
volume_db = -0.405

[connection signal="timeout" from="FireRate_Cooldown" to="." method="_on_fire_rate_cooldown_timeout"]
